2001-09-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tcl/generic/tclXlib.c (MakeAbsFile): Replaced a call to the
	  internal 'TclpGetCwd' with an access to the public API
	  'Tcl_GetCwd'. [457266]. Reported by Vincent Darley.

2001-08-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/TclX.n: 
	* tcl/generic/tclXoscmds.c: allowed sleep to accept double values,
	to match the Expect sleep command.  This prevents conflicts that
	depended on the order of package requires.  [Patch #444332]

2001-05-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* unix/tools/tclmanpages: Added "re_syntax.n" to the list of
	  processed manpages [#405956].

2001-05-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* All of the changes below are there to fix bug [418295].

	* tcl/generic/tclXoscmds.c (TclX_OsCmdsInit): "system" and
	  "sleep" now use the new command creation procedure.

	* tcl/generic/tclXprocess.c (TclX_ProcessInit): "fork" and
	  "wait" now use the new command creation procedure.

	* tcl/generic/tclXutil.c (TclX_CreateObjCommand): Added
	  the implementation of this new procedure.

	* tcl/generic/tclExtdInt.h: Added TclX_CreateObjCommand to
	  encapsulate the logic for the creation of commands FOO and
	  tclx_FOO.

2001-05-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tcl/generic/tclXlist.c (TclX_LassignObjCmd): Added
	  TCL_LEAVE_ERR_MSG to call of 'Tcl_SetVar2Ex'. This
	  fixes the bug [227478].

2001-05-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tcl/generic/tclXgeneral.c (TclX_LoopObjCmd): Changed
	  'Tcl_AppendStringsToObj' into 'Tcl_AddErrorInfo'. 

	  Fixes bug [226388]. Associated patch is [403050]. No need to
	  extend the testsuite, it already contained a test exercising the
	  bug.

2000-08-01 Brent Welch <welch@ajubasolutions.com>
	* tcl/unix/Makefile.in:
	* tk/unix/Makefile.in:
	Fixed bogus "test -f" on the new HELP_DIR directory, which should
	be "test -d".
